# road-to-meridian

./: README.md  aula1.md  aula2.md  aula3.md
workshop-1/: aula2.md  aula3.md
workshop-1/aula1/: README.md  SLIDES.md
workshop-1/aula1/calculator-olivmath/src/: calc2.rs  lib.rs
workshop-1/aula1/demo-lib/: Cargo.toml
workshop-1/aula1/projetos/calculator-olivmath/: Cargo.toml
workshop-1/aula1/projetos/calculator-olivmath/src/: calc1.rs
workshop-1/aula2/: README.md  SLIDES.md  SLIDES2.md
workshop-1/aula3/: README.md  SLIDES.md
workshop-1/aula3/crud-e/: Cargo.toml
workshop-1/aula3/crud-e/math/: Cargo.toml
workshop-1/aula3/crud-e/src/: models.rs
workshop-1/aula3/crud-e/test/: 1_create.sh  6_execute.sh
workshop-2/aula1/: DRAFT.md  README.md  SLIDES.md  notas.md
workshop-2/aula2/: DRAFT.md  README.md  SLIDES.md
workshop-2/aula2/tap-game/backend/: index.js  package-lock.json  package.json
workshop-2/aula2/tap-game/frontend/: .env  package-lock.json  package.json
workshop-2/aula3/: DRAFT.md  README.md  SLIDES.md
workshop-2/aula3/backend/: README.md  main.py  requirements.txt
workshop-3/aula1/: DRAFT.md  README.md  SLIDES.md
workshop-3/aula1/projects/contracts/fuzzy-contract/: Cargo.toml
workshop-3/aula1/projects/contracts/fuzzy-contract/src/: lib.rs
workshop-3/aula1/projects/web3/contracts/fuzzy-contract/: Cargo.toml  README.md
workshop-3/aula1/projects/web3/contracts/fuzzy-contract/fuzz/: Cargo.toml  README.md
workshop-3/aula1/projects/web3/contracts/fuzzy-contract/fuzz/fuzz_targets/: fuzz_target_1.rs
workshop-3/aula1/projects/web3/contracts/fuzzy-contract/src/: lib.rs  test.rs
workshop-3/aula1/projects/web3/contracts/fuzzy-contract/test_snapshots/test/: fuzz_test_alternating_values.1.json  fuzz_test_edge_case_transitions.1.json  fuzz_test_extreme_values.1.json  fuzz_test_idempotent_operations.1.json  fuzz_test_multiple_sets.1.json  fuzz_test_negative_values.1.json  fuzz_test_positive_values.1.json  fuzz_test_random_sequence.1.json  fuzz_test_sequential_operations.1.json  fuzz_test_storage_persistence.1.json  fuzz_test_stress_operations.1.json  fuzz_test_zero_and_boundaries.1.json  test_overwrite_value.1.json  test_set_and_get.1.json
workshop-3/aula2/: DRAFT.md  ROTEIRO.md  SLIDES.md
workshop-3/aula2/projects/: Cargo.toml  README.md
workshop-3/aula2/projects/bindings/: README.md  package.json
workshop-3/aula2/projects/bindings/src/: index.ts
workshop-3/aula2/projects/contracts/grocery/src/: contract.rs  lib.rs
workshop-3/aula2/projects/contracts/notepadv1/: Cargo.toml
workshop-3/aula2/projects/contracts/notepadv1/src/: contract.rs  lib.rs  notepad.rs  notepad_core.rs  storage.rs  upgrade.rs
workshop-3/aula2/projects/contracts/notepadv2/: Cargo.toml
workshop-3/aula2/projects/contracts/notepadv2/src/: admin.rs  contract.rs  lib.rs  notepad.rs  notepad_core.rs  storage.rs  upgrade.rs  v2.rs
workshop-3/aula2/projects/contracts/store/: Cargo.toml
workshop-3/aula2/projects/contracts/store/src/: contract.rs  lib.rs
workshop-3/aula2/projects/contracts/store/src/operation/: admin.rs  factory.rs  mod.rs  treasure.rs
workshop-3/aula2/projects/contracts/store/src/storage/: constants.rs  error.rs  types.rs
workshop-3/aula2/projects/contracts/token/: Cargo.toml
workshop-3/aula2/projects/contracts/token/src/: contract.rs
workshop-3/aula3/: DRAFT.md  README.md
workshop-3/aula3/project/: README.md  slides.md
(+187 files in other folders)
