[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
rust-version = "1.74.0"

[workspace.dependencies]
soroban-sdk = "22.0.0"
stellar-tokens = "=0.4.1"
stellar-access = "=0.4.1"
stellar-contract-utils = "=0.4.1"
stellar-macros = "=0.4.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
