[package]
name = "calculator-olivmath"
version = "0.2.0"
edition = "2024"
description = "A simple calculator library"
license = "MIT"
authors = ["olivmath <olivmath@protonmail.com>"]
repository = "https://github.com/olivmath/calculator-olivmath"
documentation = "https://docs.rs/calculator-olivmath"

[dependencies]
