[package]
name = "fuzzy-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }

[features]
testutils = ["soroban-sdk/testutils"]