[package]
name = "fuzzy-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
arbitrary = { version = "1.3", features = ["derive"] }
proptest-arbitrary-interop = "0.1.0"
proptest = "1.4"

[features]
testutils = ["soroban-sdk/testutils"]
